Add pretrained models and hugging face to sota

--- a/document/Bibliography.bib
+++ b/document/Bibliography.bib
@@ -162,10 +162,9 @@
 }
 
 @misc { 25,
-  author = {Snoek, J. and Larochelle, H. and Adams, R. P},
-  title = {Practical Bayesian Optimization of Machine Learning Algorithms},
-  year = {2012},
-  notes = {In Advances in Neural Information Processing Systems}
+  author = {Vaswani and Ashish and Shazeer and Noam and Parmar and Niki and Uszkoreit and Jakob and Jones and Llion and Gomez and Aidan N. and Kaiser and Łukasz and Polosukhin and Illia},
+  title = {Attention is all you need},
+  year = {2017}
 }
 
 @misc { 26,
@@ -488,4 +487,126 @@
   author = {Lars Kotthof and Chris Thornton and Holger H. Hoos and Frank Hutter and Kevin Leyton-Brown},
   title = {Auto-WEKA 2.0: Automatic model selection and hyperparameter optimization in WEKA},
   year = {2016}
+}
+
+@misc { 76,
+  author = {Thrun and Sebastian and Pratt and Lorien},
+  title = {Learning to Learn: Introduction and Overview.},
+  year = {1998}
+}
+
+@misc { 77,
+  author = {Pan and Sinno Jialin and Yang and Qiang},
+  title = {A survey on transfer learning},
+  year = {2009}
+}
+
+@misc { 78,
+  author = {Krizhevsky and Alex and Sutskever and Ilya and Hinton and Geoffrey E.},
+  title = {ImageNet classification with deep convolutional neural networks},
+  year = {2012}
+}
+
+@misc { 79,
+  author = {Simonyan and Karen and Zisserman and Andrew},
+  title = {Very deep convolutional networks for large- scale image recognition},
+  year = {2015}
+}
+
+@misc { 80,
+  author = {Szegedy and Christian and Liu and Wei and Jia and Yangqing and Sermanet and Pierre and Scott and Reed and
+Anguelov and Dragomir and Erhan and Dumitru and Vincent and Vanhoucke and Rabinovich and Andrew},
+  title = {Going deeper with convolutions},
+  year = {2015}
+}
+
+@misc { 81,
+  author = {He and Kaiming and Zhang and Xiangyu and Ren and Shaoqing and Sun and Jian},
+  title = {Deep residual learning for image recognition},
+  year = {2016}
+}
+
+@misc { 82,
+  author = {Sermanet and Pierre and Eigen and David and Zhang and Xiang and Mathieu and Michaël and Fergus and Rob and LeCun and Yann},
+  title = {Overfeat: integrated recognition, localization and detection using convolutional networks},
+  year = {2014}
+}
+
+@misc { 83,
+  author = {Long and Jonathan and Shelhamer and Evan and Trevor Darrell},
+  title = {Fully convolutional networks for semantic segmentation},
+  year = {2015}
+}
+
+@misc { 84,
+  author = {Qiu and Xipeng and Sun and Tianxiang and Xu and Yige and Shao and Yunfan and Dai, Ning and Huang and Xuanjing},
+  title = {Pre-trained models for natural language processing: a survey},
+  year = {2020}
+
+}
+
+@misc{ 85, 
+  author = {Liu and Xiao and Zhang and Fanjin and Hou and Zhenyu and Wang and Zhaoyu and Li and Mian and Zhang and Jing and Tang and Jie},
+  title = {Self-supervised Learning: Generative or Contrastive},
+  year = {2020}
+}
+
+@misc{ 86,
+  auhor = {Bengio and Yoshua and Ducharme and Réjean and Vincent and Pascal and Janvin and Christian},
+  title = {A neural probabilistic language model},
+  year = {2003}
+}
+
+@misc { 87,
+  author = {Mikolov and Tomas and Chen and Kai and Corrado and Greg and Dean and Jeffrey},
+  title = {Efficient estimation of word representations in vector space},
+  year = {2013}
+}
+
+@misc { 88,
+  author = {Pennington and Jeffrey and Socher and Richard and Manning and Christopher D.},
+  title = {Glove: global vectors for word representation},
+  year = {2014}
+}
+
+@misc { 89,
+  author = {Melamud and Oren and Goldberger and Jacob and Ido and Dagan},
+  title = {context2vec: learning generic context embedding with bidirectional lstm},
+  year = {2016}
+}
+
+@misc { 90,
+  author = {Peters and Matthew and Neumann and Mark and Iyyer and Mohit and Gardner and Matt and Clark and Christopher and Lee and Kenton and Zettlemoyer and Luke},
+  title = {Deep contextualized word representations},
+  year = {2018}
+} 
+
+@misc { 91,
+  author = {Hangbo Bao and Li Dong and Songhao Piao and Furu Wei},
+  title = {BEIT: BERT Pre-Training of Image Transformers},
+  year = {2021}
+}
+
+@misc { 92,
+  author = {Alexey Dosovitskiy and Lucas Beyer and Alexander Kolesnikov and Dirk Weissenborn and Xiaohua Zhai and Thomas Unterthiner and Mostafa Dehghani and Matthias Minderer and Georg Heigold and Sylvain Gelly and Jakob Uszkoreit and Neil Houlsby},
+  title = {An image is worth 16x16 words: Transformers for image recognition},
+  year = {2020}
+}
+
+@misc { 93,
+  author = {A. Ramesh and Mikhail Pavlov and Gabriel Goh and Scott Gray and Chelsea Voss and Alec Radford and Mark Chen and Ilya Sutskever},
+  title = {Zero-shot text-to-image generation},
+  year = {2021}
+}
+
+@misc { 94,
+  author = {Bolei Zhou and Hang Zhao and Xavier Puig and Tete Xiao and Sanja Fidler and Adela Barriuso and Antonio Torralba},
+  title = {Semantic understanding of scenes through the ADE20K dataset},
+  year = {2019}
+}
+
+@misc { 95,
+  author = {Thomas Wolf and Lysandre Debut and Victor Sanh and Julien Chaumond and Clement Delangue and Anthony Moi and Pierric Cistac and Tim Rault and Rémi Louf and Morgan Funtowicz and Joe Davison and Sam Shleifer and Patrick von Platen and Clara Ma and Yacine Jernite and Julien Plu and Canwen Xu and Teven Le Scao and Sylvain Gugger and Mariama Drame and Quentin Lhoest and Alexander M. Rush},
+  title = {Transformers: State-of-the-Art Natural Language Processing},
+  year = {2020}
 }
