--- a/document/MainMatter/Background.tex
+++ b/document/MainMatter/Background.tex
@@ -1,10 +1,10 @@
 \chapter{Estado del Arte}\label{chapter:state-of-the-art}
 
-El proceso de construir modelos de \textit{machine learning} de gran calidad es complejo, iterativo y consume gran cantidad de tiempo, ya que este proceso está conformado por varios pasos. Los científicos de datos necesitan recolectar los datos y limpiarlos, seleccionar el algoritmo que mejor se ajuste a la tarea entre una cantidad enorme de algoritmos, ya sean técnicas de regresión, clasificación, de agrupamiento etc; además de afinar numerosos parámetros del algoritmo seleccionado y posteriormente aplicar numerosas métricas con el objetivo de juzgar el proceso de construcción del modelo. Por lo que la decisión del científico de dato en cada paso afecta directamente la construcción de un modelo de calidad, diferentes combinaciones de estos producen diferentes valores en las métricas que se evaluan. \\
+El proceso de construir modelos de \textit{machine learning} de gran calidad es complejo, iterativo y consume gran cantidad de tiempo, ya que este proceso está conformado por varios pasos. Los científicos de datos necesitan recolectar los datos y limpiarlos, seleccionar el algoritmo que mejor se ajuste a la tarea entre una cantidad enorme de algoritmos, ya sean técnicas de regresión, clasificación, de agrupamiento etc; además de afinar numerosos parámetros del algoritmo seleccionado y posteriormente aplicar numerosas métricas con el objetivo de juzgar el proceso de construcción del modelo. Por lo que la decisión del científico de dato en cada paso afecta directamente la construcción de un modelo de calidad, entonces diferentes combinaciones de estos producen diferentes valores en las métricas que se evaluan. \\
 
 Explorar todas las combinaciones posibles para resolver un problema muchas veces es no viable, ya que puede ser exponencial la cantidad de configuraciones en las cuales se puede evaluar nuestro problema, cada combinación conlleva al consumo de recursos computacionales y de tiempo. \\
 
-La automatización de este proceso es llamado AutoML o Auto Machine Learning. Es importante saber que AutoML no es una tendencia nueva. En los años 1990s, soluciones comerciales ofrecían automatizar HPO para algoritmos de clasificación seleccionados vía \textit{grid search} \parencite{17}. Adaptaciones al \textit{grid search} para probar posibles configuraciones en un enfoque \textit{greedy} están disponibles desde 1995 \parencite{18}. Temprano en los 2000s las primeras estrategias eficientes para HPO fueron propuestas. Para configuraciones limitadas, por ejemplo afinar $C$ y $\gamma$ de un \textit{support vector machine} (SVM) \parencite{19} \parencite{20}, fue probado que las estrategias de búsqueda guiadas tienen mejor resultado que \textit {grid search} en menor tiempo. También en el 2004, el primer enfoque para automatizar la selección de características fue publicado \parencite{21}. Selección completa del modelo \parencite{22} fue el primer intento de construir automáticamente un pipeline de ML completo seleccionando un algoritmo de preprocesamiento, de selección de características y de clasificación simultáneamente, mientras se afinaban los hiperparámetros de cada uno de estos algoritmos. Evaluando este enfoque en varios conjuntos de datos se demostró el potencial de este método \parencite{23}. Iniciando el 2011 muchos métodos diferentes aplicando optimización Bayesiana para la afinación de hiperparámetros \parencite{24} \parencite{25} y selección de modelos fueron propuestos \parencite{13}. En el 2015, el primer método de ingeniería de características automático sin conocimiento del dominio fue propuesto \parencite{26}. Es posible construir pipelines de forma variable desde el 2016 \parencite{27}. En el 2017 y 2018 el tema de AutoML recibió mucha atención en los medios con la realización de soluciones comerciales de AutoML \parencite{28} \parencite{29} \parencite{30} \parencite{31}. Simultáneamente las investigaciones en el área de AutoML ganaron mucha atracción conllevando a mejoras de rendimiento significativas. Métodos recientes son capaces de reducir el tiempo de corrida de procedimientos AutoML desde varias horas a algunos minutos \parencite{32}.
+La automatización de este proceso es llamado AutoML o Auto Machine Learning. Es importante saber que AutoML no es una tendencia nueva. En los años 1990s, soluciones comerciales ofrecían automatizar HPO para algoritmos de clasificación seleccionados vía \textit{grid search} \parencite{17}. Adaptaciones al \textit{grid search} para probar posibles configuraciones en un enfoque \textit{greedy} están disponibles desde 1995 \parencite{18}. Temprano en los 2000s las primeras estrategias eficientes para HPO fueron propuestas. Para configuraciones limitadas, por ejemplo afinar $C$ y $\gamma$ de un \textit{support vector machine} (SVM) \parencite{19} \parencite{20}, fue probado que las estrategias de búsqueda guiadas tienen mejor resultado que \textit {grid search} en menor tiempo. También en el 2004, el primer enfoque para automatizar la selección de características fue publicado \parencite{21}. Selección completa del modelo \parencite{22} fue el primer intento de construir automáticamente un pipeline de ML completo seleccionando un algoritmo de preprocesamiento, de selección de características y de clasificación simultáneamente, mientras se afinaban los hiperparámetros de cada uno de estos algoritmos. Evaluando este enfoque en varios conjuntos de datos se demostró el potencial de este método \parencite{23}. Iniciando el 2011 muchos métodos diferentes aplicando optimización Bayesiana para la afinación de hiperparámetros \parencite{24} \parencite{8} y selección de modelos fueron propuestos \parencite{13}. En el 2015, el primer método de ingeniería de características automático sin conocimiento del dominio fue propuesto \parencite{26}. Es posible construir pipelines de forma variable desde el 2016 \parencite{27}. En el 2017 y 2018 el tema de AutoML recibió mucha atención en los medios con la realización de soluciones comerciales de AutoML \parencite{28} \parencite{29} \parencite{30} \parencite{31}. Simultáneamente las investigaciones en el área de AutoML ganaron mucha atracción conllevando a mejoras de rendimiento significativas. Métodos recientes son capaces de reducir el tiempo de corrida de procedimientos AutoML desde varias horas a algunos minutos \parencite{32}.
 
 \section{AutoML como problema CASH}
 
@@ -104,3 +104,103 @@ H2O \parencite{73} es una plataforma de aprendizaje automático distribuido de c
 
 El algoritmo AutoML de H2O se basa en el entrenamiento eficiente de los algoritmos de aprendizaje automático de H2O para producir una gran cantidad de modelos en poco tiempo. H2O AutoML utiliza una combinación de búsqueda aleatoria rápida y conjuntos apilados para lograr resultados competitivos y, a menudo, mejores que otros \textit{frameworks} que se basan en técnicas de ajuste de modelos más complejas, como optimización bayesiana o algoritmos genéticos. H2O AutoML entrena una variedad de algoritmos (p. ej., \textit{GBM}, \textit{Random Forests}, \textit{Deep Neural Networks}, \textit{GLM}), lo que produce una buena cantidad de diversidad entre los modelos candidatos, que pueden explotarse mediante conjuntos apilados para producir un modelo final potente. La eficacia de esta técnica se refleja en \textit{OpenML AutoML Benchmark}, que compara el rendimiento de varios de los sistemas AutoML de código abierto más conocidos en varios conjuntos de datos.
 
+\section{Modelos preentrenados y \textit{Transfer Learning}}
+
+Durante mucho tiempo hasta ahora, ha sido un tema de investigación clave: cómo entrenar modelos \textit{deep neural} efectivos para tareas específicas con datos limitados anotados por humanos. Un hito para este problema es la introducción del \textit{transfer learning} \parencite{76} \parencite{77}. En lugar de entrenar un modelo desde cero con grandes cantidades de datos, los seres humanos pueden aprender a resolver nuevos problemas con muy pocas muestras. Este sorprendente proceso de aprendizaje está motivado por el hecho de que los seres humanos pueden utilizar conocimientos adquiridos previamente para manejar nuevos problemas. Inspirándose en esto, el aprendizaje por transferencia formaliza un marco de aprendizaje de dos fases: una fase de precapacitación para capturar el conocimiento de una o más tareas de origen y una etapa de ajuste para transferir el conocimiento capturado a las tareas de destino. Debido a la gran cantidad de conocimientos obtenidos en la fase previa al entrenamiento, la fase de \textit{fine tuning} puede permitir que los modelos manejen bien las tareas objetivo con muestras limitadas.  
+
+El \textit{transfer learning} proporciona un método factible para aliviar el desafío de los datos hambrientos, y pronto se ha aplicado ampliamente al campo de la visión por computadora (CV o \textit{Computer Vision}). Una serie de CNN \parencite{78} \parencite{79} \parencite{80} se entrenan previamente en el conjunto de datos de reconocimiento visual anotado por humanos Image Net. Beneficiándose del sólido conocimiento visual distribuido en ImageNet, el ajuste fino de estas CNN preentrenadas con una pequeña cantidad de datos específicos de la tarea puede funcionar bien en las tareas posteriores. Esto desencadena la primera ola de exploración de modelos preentrenados (PTM) en la era del aprendizaje profundo. En esta ola, los PTM se utilizan para casi todas las tareas de CV, como clasificación de imágenes \parencite{81}, detección de objetos \parencite{82} y segmentación de imágenes \parencite{83}.  
+
+La comunidad de procesamiento de lenguaje natural (NLP) también era consciente del potencial de los PTM y comenzó a desarrollar PTM para tareas de NLP \parencite{84}. Para aprovechar al máximo los corpus sin etiquetar a gran escala para proporcionar un conocimiento lingüístico versátil para las tareas de NLP, la comunidad de NLP adopta el aprendizaje autosupervisado \parencite{85} para desarrollar PTM. La motivación del aprendizaje autosupervisado es aprovechar las correlaciones intrínsecas en el texto como señales de supervisión en lugar de supervisión humana. Por ejemplo, dada la oración "Beijing es la capital de China", enmascaramos la última palabra de la oración y luego requerimos modelos para predecir la posición enmascarada con la palabra "China". A través del aprendizaje autosupervisado, se pueden utilizar enormes cantidades de datos textuales sin etiquetar para capturar conocimientos lingüísticos versátiles sin una carga de trabajo intensiva. Este entorno autosupervisado, en esencia, sigue el conocido modelo de aprendizaje del lenguaje \parencite{86}.  
+
+Durante mucho tiempo, el problema de la desaparición o explosión de gradientes (Bengio et al., 1994) es el punto crítico del uso de \textit{deep neural networks} para tareas de NLP. Por lo tanto, cuando la comunidad CV avanza en la investigación de PTM profundos, la exploración temprana de la comunidad NLP se centra en el entrenamiento previo de redes superficiales para capturar significados semánticos de palabras, como Word2Vec \parencite{87} y GloVe \parencite{88}. Aunque estos \textit{embeddings} de palabras preentrenados juegan un papel importante en varias tareas de NLP, todavía enfrentan una limitación importante para representar palabras polisémicas en diferentes contextos, ya que cada palabra está representada por un solo vector denso. Un ejemplo famoso en NLP es que la palabra "banco" tiene significados completamente diferentes en las oraciones "abrir una cuenta bancaria" y "en la orilla del río". Esto motiva a los RNN de entrenamiento previo a proporcionar \textit{embeddings} de palabras contextualizadas \parencite{89} \parencite{90}, aunque el rendimiento de estos modelos aún está limitado por el tamaño y la profundidad de su modelo.  
+
+Con el desarrollo de \textit{deep neural networks} en la comunidad de NLP, la introducción de Transformers \parencite{25} hace factible entrenar modelos neuronales muy profundos para tareas de NLP. Con Transformers como arquitecturas y el aprendizaje del modelo de lenguaje como objetivos, se proponen PTM profundos GPT \parencite{12} y BERT \parencite{11} para tareas de NLP en 2018. De GPT y BERT, podemos encontrar que cuando el el tamaño de los PTM aumenta, los PTM a gran escala con cientos de millones de parámetros pueden capturar la desambiguación polisémica, las estructuras léxicas y sintácticas, así como el conocimiento fáctico del texto. Mediante el \textit{fine tuning} de los PTM a gran escala con bastantes muestras, el rico conocimiento lingüístico de los PTM brinda un rendimiento asombroso en las tareas posteriores de NLP. Los PTM a gran escala se desempeñaron bien tanto en tareas de comprensión como de generación de idiomas en los últimos años e incluso lograron mejores resultados que el desempeño humano. Todos estos esfuerzos y logros en la comunidad de NLP permitieron que los PTM a gran escala se convirtieran en el foco de la investigación de IA, después de la última ola en la que los PTM permitieron grandes avances en la comunidad de CV.
+
+\subsection{BEiT}
+
+BEIT (\textit{Bidirectional Encoder representation from Image Transformers}) \parencite{91} es un modelo de representación de visión autosupervisada, que es la representación de un \textit{encoder} bidireccional de \textit{Image Transformers}. Siguiendo a BERT \parencite{11} desarrollado en el área de procesamiento de lenguaje natural, se propone una tarea de modelado de imágenes enmascaradas para preentrenar a los \textit{vision Transformers}. Específicamente, cada imagen tiene dos vistas en el entrenamiento previo, es decir, \textit{image patches} (como 16 x 16 píxeles) y \textit{visual tokens} (es decir, tokens discretos). Primero se “tokeniza” la imagen original en \textit{visual tokens}. Luego, se enmascara aleatoriamente algunos \textit{image patches} y se alimenta el \textit{Transformer} principal con estos. El objetivo de pre-entrenamiento es recuperar los \textit{visual tokens} originales basados en los \textit{image patches} dañados. Después de entrenar previamente a BEIT, se ajustan directamente los parámetros del modelo en las tareas posteriores agregando capas de tareas al codificador previamente entrenado. Los resultados experimentales sobre la clasificación de imágenes y la segmentación semántica muestran que el modelo logra resultados competitivos con los métodos de preentrenamiento anteriores.
+
+Dada una imagen de entrada x, BEIT la codifica en representaciones vectoriales contextualizadas. BEIT se entrena previamente mediante la tarea de modelado de imágenes enmascaradas (MIM) en una forma de aprendizaje autosupervisado. MIM tiene como objetivo recuperar los \textit{image patches} enmascarados basados en vectores de codificación. Para las tareas posteriores (como la clasificación de imágenes y la segmentación semántica), se agregan capas de tareas sobre BEIT previamente entrenado y se ajustan(\textit{fine tune}) los parámetros en los conjuntos de datos específicos.
+
+\subsection{Representación de las imágenes}
+Las imágenes tienen dos formas de representarse en BEIT, llamadas, \textit{iamge patches} y \textit{visual tokens}. Los dos tipos sirven como representaciones de entrada y salida durante el entrenamiento previo, respectivamente.
+
+\subsection{Pre-entrenamiento de BEIT}
+La arquitectura de red de BEIT sigue la de ViT-Base \parencite{92} para una comparación justa. Se usó un \textit{Transformer} de 12 capas con 768 \textit{hidden size} y 12 \textit{attention heads}. El tamaño intermedio de las redes \textit{feed-forward} es  de 3072. Se empleó el tamaño predeterminado 16x16 de \textit{patch size} de entrada. Como tokenizador de imágenes se tomó uno entrenado por \parencite{93}. El tamaño del vocabulario de los \textit{visual tokens} es de 8192. 
+
+BEIT fue pre-entrenado en el conjunto de entrenamiento de ImageNet-1K, que contiene alrededor de 1,2 millones de imágenes. La tarea de \textit{image augmentation} incluye recorte de tamaño aleatorio, volteo horizontal, fluctuación de color. 
+
+El pre-entrenamiento corrió 500k pasos (i.e., 800 \textit{epochs}) con 2k the tamaño de \textit{batch}. Adam fue usado para la implementación con $\beta_{1} = 0.9$ y $\beta_{2} = 0.999$. El índice de aprendizaje fue de $1.5e-3$.
+
+\subsection{Fine-Tuning BEIT on Downstream Vision Tasks}
+Después de hacer pre-entrenamiento a BEIT, se agrega una capa de tareas sobre el \textit{Transformer} y se hace \textit{fine tune} a los parámetros para tareas posteriores, como en BERT. Tomamos la clasificación de imágenes y la segmentación semántica como ejemplos. Es sencillo aprovechar el paradigma de preentrenamiento y luego \textit{fine tune} en otras tareas de visión con BEIT.
+
+\subsection{BEiT en Clasificación de imágenes:}
+
+La tarea de clasificación de imágenes consiste en dado imágenes como entrada clasificarlas en categorías. El modelo BEiT se evaluó en el conjunto de datos ILSVRC-2012 ImageNet, el cual consiste en 1000 clases y 1,3 millones de imágenes. Se utilizaron la mayoría de los hiperparámetros de DEiT en los experimentos de \textit{fine tuning} para hacer la comparación justa. Se redjueron los \textit{epochs} de \textit{fine tuning} en comparación con el entrenamiento desde cero, ya que BEIT ha sido pre-entrenado. En consecuencia se usó una tasa mayor de aprendizaje con decaimiento por capas.
+
+En la tabla se ve como top-1 en la clasificación de imágenes. BEIT se comparó con \textit{Vision Transformers} entrenados mediante inicialización aleatoria, pre-entrenamiento supervisado y métodos previos de aprendizaje autosupervisado. Todos los modelos comparados son de tamaño base, excepto iGPT que tiene parámetros 1,36 billones de parámetros. El entrenamiento previo se lleva a cabo en ImageNet con fines comparativos, excepto que ViT-JFT300M se entrena previamente en las 300 millones de imágenes internas de Google.
+
+\begin{center}
+    \begin{tabular}{||c c c c ||} 
+        \hline
+        Modelos & Tamaño del modelo & Resolución & ImageNet \\ [0.5ex] 
+        \hline\hline
+        DeiT-B & 86M & $224^2$ & 81.8 \\ 
+        \hline
+        DeiT384-B & 86M & $384^2$ & 83.1 \\
+        \hline
+        BEIT-B & 86M & $224^2$ & 83.2 \\
+        \hline
+        BEIT384-B & 86M & $384^2$ & 84.6 \\
+        \hline
+        BEIT-L & 307M & $224^2$ & 85.2 \\
+        \hline
+        BEIT384-L & 307M & $384^2$ & 86.3 \\ [1ex] 
+        \hline
+    \end{tabular}
+\end{center}
+
+En comparación con los modelos entrenados mediante inicialización aleatoria, se ve que BEIT preentrenado mejora significativamente el rendimiento en ambos conjuntos de datos. BEIT mejora el rendimiento en ImageNet, lo que muestra la efectividad en la configuración de recursos abundantes.
+
+
+\subsection{BEiT en Segmentación semántica:}
+La segmentación semántica tiene como objetivo predecir una clase correspondiente para cada píxel de la imagen de entrada. BEIT  se evaluó en el \textit{benchmark ADE20K}  \parencite{94} con 25K imágenes y 150 categorías semánticas. En ADE20K, se usó Adam como optimizador. La tasa de aprendizaje se establece en $1e-3$ con una descomposición por capas similar a la clasificación de imágenes. 
+
+\begin{center}
+    \begin{tabular}{||c c c ||} 
+        \hline
+        Modelos & ImageNet & ADE20K \\ [0.5ex] 
+        \hline\hline
+        BEiT (300 \textit{epochs}) & 82.86 & 44.65 \\ 
+        \hline
+        Enmascaramiento por bloques & 82.77 & 42.93 \\
+        \hline
+        \textit{Visual tokens} (i.e., recuperar píxels enmascarados) & 81.04 & 41.38 \\
+        \hline
+        \textit{Visual tokens} - Blockwise masking & 80.50 & 37.09 \\
+        \hline
+        Recuperar 100\% \textit{visual tokens} & 82.59 & 40.93 \\
+        \hline
+        Enmascarar y recuperar 100\% \textit{visual tokens} & 81.67 & 36.73 \\
+        \hline
+        Pre-entrenamiento más largo (800 \textit{epochs}) & 83.19 & 45.58 \\ [1ex] 
+        \hline
+    \end{tabular}
+\end{center}
+
+Se comparó BEiT con el pre-entrenamiento supervisado que se basa en datos etiquetados de ImageNet y se vió que logra un mejor rendimiento que el pre-entrenamiento supervisado, aunque BEIT no requiere anotaciones manuales para el pre-entrenamiento. Además, primero se hizo \textit{fine tune} a BEiT en ImageNet y luego al resultado se le hizo \textit{fine tune} en \textit{ADE20K}. Los resultados mostraron que hace \textit{fine tune} como paso intermedio mejora BEiT en la segmentación semántica.
+
+\section{HuggingFace Transformers}
+\textit{Transformers} \parencite{95} es una biblioteca de código abierto con el objetivo de abrir estos avances a la comunidad más amplia de aprendizaje automático. La biblioteca consta de arquitecturas \textit{Transformer} de última generación cuidadosamente diseñadas bajo una API unificada. El respaldo de esta biblioteca es una colección seleccionada de modelos preentrenados hechos por y disponibles para la comunidad. \textit{Transformers} está diseñado para ser extensible por los investigadores, simple para los profesionales y rápido y robusto en implementaciones industriales. La biblioteca está disponible en https://github.com/huggingface/transformers.
+
+\textit{Transformers} es una biblioteca dedicada a admitir arquitecturas basadas en \textit{Transformer} y facilitar la distribución de modelos pre-entrenados. En el núcleo de la biblioteca hay una implementación de \textit{Transformer} que está diseñada tanto para la investigación como para la producción. La filosofía es admitir implementaciones de potencia industrial de variantes de modelos populares que sean fáciles de leer, ampliar e implementar. Sobre esta base, la biblioteca admite la distribución y el uso de una amplia variedad de modelos preentrenados en un centro de modelos centralizado. Este centro permite a los usuarios comparar diferentes modelos con la misma API y experimentar con modelos compartidos en una variedad de tareas diferentes.
+
+Transformers es un esfuerzo continuo mantenido por el equipo de ingenieros e investigadores de Hugging Face con el apoyo de una comunidad de más de 400 colaboradores externos. La biblioteca se publica bajo la licencia Apache 2.0 y está disponible en GitHub\footnote[1]{\url{https://github.com/huggingface/transformers}}. La documentación detallada y los tutoriales están disponibles en el sitio web de Hugging Face\footnote[2]{\url{https://huggingface.co/transformers/}}.
+
+\subsection{HuggingFace Hub}
+HuggingFace Hub contiene más de 60000 modelos, 6000 conjuntos de datos y 6000 aplicaciones de demostración (Spaces), todas de código abierto y disponibles públicamente, en una plataforma en línea donde las personas pueden colaborar fácilmente y crear aprendizaje automático juntos. The Hub funciona como un lugar central donde cualquiera puede explorar, experimentar, colaborar y desarrollar tecnología con Machine Learning. 
+
+\textit{Modelos\footnote[3]{\url{https://huggingface.co/models/}}}: Puedes descubrir y usar docenas de miles de modelos ML de código abierto compartidos por la comunidad. Para promover el uso y desarrollo responsable de modelos, los repositorios de modelos están equipados con tarjetas de modelo para informar a los usuarios sobre las limitaciones y sesgos de cada modelo. Se pueden incluir metadatos adicionales sobre información como sus tareas, idiomas y métricas, con gráficos de métricas de entrenamiento incluso agregados si el repositorio contiene seguimientos de TensorBoard. Para la configuración de producción, se proporciona una API para servir instantáneamente su modelo.
+
+\textit{Datasets\footnote[4]{\url{https://huggingface.co/datasets/}}}: El Hub contiene más de 5000 conjuntos de datos en más de 100 idiomas que se pueden usar para una amplia gama de tareas en NLP, Computer Vision y Audio. El Hub simplifica la búsqueda, descarga y la carga de conjuntos de datos. Los conjuntos de datos van acompañados de una amplia documentación en forma de tarjetas de conjuntos de datos y vista previa de conjuntos de datos que le permiten explorar los datos directamente en su navegador. Si bien muchos conjuntos de datos son públicos, las organizaciones y las personas pueden crear conjuntos de datos privados para cumplir con los problemas de licencia o privacidad.
